--- a/InvestmentTracker/Pages/Investments/Create.cshtml
+++ b/InvestmentTracker/Pages/Investments/Create.cshtml
@@ -4,7 +4,7 @@
 
 <h2>Create Investment</h2>
 
-<form method="post" class="mt-3">
+<form method="post" class="mt-3" data-loading="Creating investment...">
     <div class="mb-3">
         <label asp-for="Investment.Name" class="form-label"></label>
         <input asp-for="Investment.Name" class="form-control" />
