--- a/InvestmentTracker/Pages/Expenses/EditExpenseCategory.cshtml
+++ b/InvestmentTracker/Pages/Expenses/EditExpenseCategory.cshtml
@@ -13,7 +13,7 @@
                 Category Details
             </div>
             <div class="card-body">
-                <form method="post">
+                <form method="post" data-loading="Updating category...">
                     <div class="mb-3">
                         <label asp-for="Category.Name" class="form-label"></label>
                         <input asp-for="Category.Name" class="form-control" />
