--- a/InvestmentTracker/Pages/Expenses/EditIncomeSource.cshtml
+++ b/InvestmentTracker/Pages/Expenses/EditIncomeSource.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <form method="post">
+        <form method="post" data-loading="Updating income source...">
             <input type="hidden" asp-for="IncomeSource.Id" />
             <div class="mb-3">
                 <label asp-for="IncomeSource.Name" class="form-label"></label>
