--- a/InvestmentTracker/Pages/Shared/_Layout.cshtml.css
+++ b/InvestmentTracker/Pages/Shared/_Layout.cshtml.css
@@ -40,8 +40,8 @@ button.accept-policy {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
+  position: static;
+  bottom: auto;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
