add the shortcut hints to the buttons

--- a/InvestmentTracker/Pages/Expenses/Index.cshtml
+++ b/InvestmentTracker/Pages/Expenses/Index.cshtml
@@ -117,7 +117,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 One-Time Incomes
-                <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#addOneTimeIncomeModal">Add Income</button>
+                <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#addOneTimeIncomeModal">Add Income <kbd>O</kbd></button>
             </div>
             <div class="card-body">
                 <table class="table mb-0">
@@ -168,7 +168,7 @@
             <div class="card-header d-flex justify-content-between align-items-center">
                 Regular Expenses
                 <div>
-                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#addRegularExpenseModal">Add Expense</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#addRegularExpenseModal">Add Expense <kbd>A</kbd></button>
                 </div>
             </div>
             <div class="card-body">
@@ -224,7 +224,7 @@
             <div class="card-header d-flex justify-content-between align-items-center">
                 Irregular Expenses
                 <div>
-                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#addIrregularExpenseModal">Quick Add</button>
+                    <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#addIrregularExpenseModal">Quick Add <kbd>Q</kbd></button>
                 </div>
             </div>
             <div class="card-body">
